- Fix processInputStream - Add Docker client inside docker image